--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Libre+Franklin&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-body {
-  font-family: "Bebas Neue", sans-serif;
 }
 .mainDiv {
   display: grid;
@@ -20,6 +16,7 @@ input {
   box-shadow: 3px 3px 3px grey, -1px -1px 1px rgb(234, 226, 226);
   outline: none;
   height: 70px;
+  padding: 2px 8px;
 }
 .btn:hover {
   box-shadow: inset 3px 3px 3px grey, -2px -2px 2px rgb(234, 226, 226);
